--- a/style/main.css
+++ b/style/main.css
@@ -21,3 +21,30 @@ body {
 body {
     background-color: cadetblue;
 }
+
+section {
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: .3rem;
+}
+
+.screen {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    width: 20%;
+}
+
+.calc-container {
+    border: 2px solid rgb(36, 63, 182);
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    width: 50%;
+    padding: .3rem;
+}
+
+button {
+    padding: .6rem;
+}
